# FramePlayer

./: .cursorrules  .gitignore  README.md  settings.gradle
FramePlayerNative/: CMakeLists.txt
FramePlayerNative/cmake/: common.cmake
FramePlayerNative/install/include/main/: fpn_player.h  fpn_window.h
FramePlayerNative/script/: VERSION.sh  build.sh  push.sh
FramePlayerNative/source/: CMakeLists.txt
FramePlayerNative/source/android/: CMakeLists.txt  fpn_jni_base.cpp  fpn_jni_base.h  fpn_jni_class.cpp  fpn_jni_class.h  fpn_jni_player.cpp  fpn_jni_player.h
FramePlayerNative/source/extra/producer/: CMakeLists.txt  fpn_gif_producer.cpp  fpn_gif_producer.h
FramePlayerNative/source/extra/render/: CMakeLists.txt  fpn_canvas.cpp  fpn_canvas.h
FramePlayerNative/source/log/: CMakeLists.txt  fpn_log.h
FramePlayerNative/source/main/: CMakeLists.txt  fpn_context.h  fpn_main.cpp  fpn_player.cpp  fpn_player.h  fpn_window.cpp  fpn_window.h
app/: build.gradle
app/src/androidTest/java/com/demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/demo/: MainActivity.java  TestFramePlayer.java
app/src/main/java/com/demo/player/: FPNPlayer.java
app/src/main/java/com/demo/view/: FrameSurfaceView.java
app/src/main/jniLibs/arm64-v8a/: dump.txt
app/src/main/res/layout/: activity_main.xml  activity_test_frame_player.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
